# 42_CPP_Module_05-09

./: .gitignore  README.md
cpp05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
cpp05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
cpp05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
cpp05/ex03/: AForm.hpp  Bureaucrat.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
cpp06/ex00/: Display.hpp  Makefile  ScalarConverter.cpp  ScalarConverter.hpp  main.cpp
cpp06/ex01/: Data.hpp  Makefile  Serializer.cpp  Serializer.hpp  main.cpp
cpp06/ex02/: A.hpp  B.hpp  Base.hpp  C.hpp  D.hpp  Makefile  main.cpp
cpp07/: .gitignore
cpp07/ex00/: Makefile  main.cpp  whatever.hpp
cpp07/ex01/: iter.hpp  main.cpp
cpp07/ex02/: Array.hpp  Makefile  main.cpp
cpp08/: .gitignore
cpp08/ex00/: easyfind.hpp  main.cpp
cpp08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
cpp08/ex02/: MutantStack.hpp  main.cpp
cpp09/ex00/: .gitignore  BitcoinExchange.cpp  BitcoinExchange.hpp  Makefile  data.csv  input.txt  main.cpp
cpp09/ex01/: .gitignore  CMakeLists.txt  Makefile  RPN.cpp  RPN.hpp  TestOverflow.cpp  TestRPN.cpp  main.cpp
cpp09/ex02/: .gitignore  Makefile  PmergeMe.cpp  PmergeMe.hpp  PmergeMe.tpp  main.cpp
